-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.6, 5.11.2
-
-
b2f43ac03326bed8f8890998be510f83dc58b68c (qt/qtwebengine/5.12)
To reproduce:
- run attached example with --disable-pinch parameter
- try to pinch zoom with a touch screen
- duplicates
-
QTBUG-60693 QtWebengine --disable-pinch does not work
-
- Closed
-
- relates to
-
QTBUG-55252 Unable to disable multitouch zoom (windows) or touch pad (mac os)
-
- Reported
-