Speculative fix for disable-pinch not working

Introduces logic from render_widget_host_view_android.cc to ignore
pinch gestures when pinch is disabled.

Fixes: QTBUG-70913
Change-Id: Ib88c423c248148afdb2d203f89ab90c63b32012c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>